# cw_test_case

./: .gitignore  README.md
domain_understanding/: anomaly_detection.py  anomaly_results_checkout_1.csv  anomaly_results_checkout_2.csv  eda.ipynb  eda_checkout.ipynb  eda_transactions_anomaly_detection.ipynb  evaluate_single_query.sql  layered_query.sql
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
toy_project/: alert_rules.yml  docker-compose.yml  prometheus.yml  promtail-config.yml  pyproject.toml  refactor_summary.md  test_propagation_quick.py  verify_observability.py
toy_project/anomaly_model/: anomaly_modeling.ipynb  pyproject.toml
toy_project/anomaly_model/anomaly_model/: __init__.py  model.py  train.py
toy_project/anomaly_model/anomaly_model/artifacts/: isolation_forest.joblib
toy_project/anomaly_model/tests/: test_model.py
toy_project/common/: README.md  pyproject.toml
toy_project/common/cw_common/: __init__.py
toy_project/common/cw_common/observability/: __init__.py  logging.py  metrics.py  middleware.py  propagation.py  testing.py  tracing.py
toy_project/common/tests/: test_obs_init.py  test_obs_logging.py  test_obs_metrics.py  test_obs_middleware.py
toy_project/grafana/dashboards/: monitoring-overview.json
toy_project/grafana/provisioning/alerting/: contactpoints.yml  policies.yml  rules.yml
toy_project/grafana/provisioning/datasources/: datasources.yml
toy_project/monitoring_service/: Dockerfile  README.md  pyproject.toml
toy_project/monitoring_service/app/: alerting.py  consumer.py  database.py  detector.py  main.py  scheduler.py  telemetry.py
toy_project/monitoring_service/app/models/: __init__.py  alerts.py  commands.py  queries.py
toy_project/monitoring_service/app/routes/: __init__.py  alerts.py  commands.py  health.py  queries.py
toy_project/monitoring_service/tests/: test_alert_integration.py  test_alerting.py  test_alerts.py  test_api.py  test_metrics.py  test_scheduler.py  test_tracing.py
toy_project/stream_processor/: Dockerfile  README.md  controls.py  loader.py  main.py  producer.py  pyproject.toml  telemetry.py
toy_project/stream_processor/tests/: test_metrics.py  test_tracing.py
toy_project/tests/: test_integration.py  test_trace_linking.py
