[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-model"
version = "0.1.0"
description = "Isolation Forest anomaly detection for transaction monitoring"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["anomaly_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
