[project]
name = "stream-processor"
version = "0.2.0"
description = "Mock stream processor that replays transaction CSVs to Kafka"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.6.0",
    "pandas>=2.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["stream_processor"]
package-dir = {"stream_processor" = "."}
